src/static/css/page.css
/* ... */
.figure-dropdown {
  position: absolute;
  top: -10px;
  right: -50px;
  display: flex;
  flex-direction: column;
  align-items: flex-end;
}

.table-wrap .figure-dropdown {
  top: 0;
}

.figure-dropdown button {
  opacity: 0.5;
  border: none;
  padding: 0.5rem;
  color: #0b1423;
}

.figure-dropdown button:focus,
.figure-dropdown button:hover {
  opacity: 1;
  color: inherit;
}

.figure-dropdown-list.nav-dropdown-list {
  position: relative;
  padding: 0;
  margin: 0;
  border-radius: 16px;
  border-radius: 1rem;
  overflow: hidden;
}

.figure-dropdown-list li {
  display: flex;
}

.figure-dropdown-list a {
  text-decoration: none;
  padding: 15px 20px;
}

.figure-dropdown-list a:hover,
.figure-dropdown-list a:focus {
  text-decoration: underline;
  background-color: #5c687d;
  color: white;
}

.figure-dropdown svg {
  pointer-events: none;
}

.figure-dropdown .nav-dropdown-btn::after {
  display: none;
}

.figure-dropdown .nav-dropdown-btn.dropdown-open {
  background-color: transparent;
  border: none;
}

.figure-dropdown .nav-dropdown-list {
  background-color: white;
  border-color: #5c687d;
}

table {
  margin: 0 auto;
  max-width: 100%;
  border-collapse: collapse;
}

thead {
  font-family: 'Poppins', sans-serif;
  border-bottom: 1px solid #eee;
}

th,
td {
  padding: 10px;
  padding: 0.625rem;
}

th.numeric,
td.numeric {
  text-align: right;
}

td .numeric-good {
  color: #38761d;
}

td .numeric-bad {
  color: #f00;
}

tbody tr:nth-child(even) {
  background-color: #f2f2f280;
}

figure .big-number {
  text-align: center;
  font: bold 128px/1em Poppins, sans-serif;
  font: bold 8rem/1em Poppins, sans-serif;
  color: #62718b;
  word-break: break-word;
  overflow-wrap: break-word;
  margin: 0.1em 0;
}

figure .medium-number {
  text-align: center;
  font: bold 48px/1em Poppins, sans-serif;
  font: bold 3rem/1em Poppins, sans-serif;
  color: #62718b;
  word-break: break-word;
  overflow-wrap: break-word;
}

figure .really-big-number {
  text-align: center;
  font: bold 24px/1em Poppins, sans-serif;
  font: bold 1.5rem/1em Poppins, sans-serif;
  color: #62718b;
  word-break: break-word;
  overflow-wrap: break-word;
}

figure .fig-mobile {
  display: none;
}

figure object {
  max-width: 100%;
  height: auto;
}

figure .fig-desktop {
  display: block;
}

.video-embed {
  display: block;
}

.video-fallback-image {
  display: none;
}

.bio {
  margin-top: 10px;
  margin-top: 0.625rem;
}

@media (max-width: 56.25em) {
  .main {
    -ms-grid-columns: 1fr;
    grid-template-areas:
      'index'
      'content';
    grid-template-columns: auto;
    grid-template-columns: 100%; /* auto sometimes not set correctly on font zoom */
  }

  .main .content {
    -ms-grid-row: 2;
    -ms-grid-column: 1;
    margin-left: 0;
  }

  .index {
    -ms-grid-row: 1;
    margin: 30px 0;
    margin: 1.875rem 0;
  }

  .index-box .header {
    display: flex;
    justify-content: space-between;
    margin: 0;
  }

  .index-box .index-btn {
    display: block;
  }

  .index-box .no-button {
    display: none;
  }

  .index-box .index-btn::after {
    font-weight: normal;
    float: right;
    content: "+";
    content: "+" / "";
  }

  .index-box.show .index-btn::after {
    content: "-";
    content: "-" / "";
  }

  .index-box ul {
    max-height: 0;
    display: none;
    border-top: 0 solid #fff;
    transition: max-height 0.15s ease-out;
    overflow: hidden;
  }

  .index-box.show ul {
    margin-top: 2px;
    border-top: 1px solid #1a2b490a;
    max-height: 100%;
    display: block;
    transition: max-height 0.25s ease-in;
  }

  .index li.active::before {
    background-color: transparent;
  }

  .table-wrap {
    justify-content: left;
  }

  table {
    font-size: 0.8em;
  }
}

@media (max-width: 56.25em) {
  figure {
    margin: 0 15px;
    margin: 0 0.9375rem;
  }

  .figure-dropdown {
    right: -2rem;
  }

  figure .big-number {
    font-size: 80px;
    font-size: 5rem;
  }

  figure iframe {
    display: none;
  }

  figure .fig-mobile {
    display: block;
    max-width: 100%;
    height: auto;
  }

  .fig-description-button {
    margin-top: 10px;
    margin-top: 0.625rem;
    margin-bottom: 10px;
    margin-bottom: 0.625rem;
    font-size: 16px;
    font-size: 1rem;
  }

  .index .sticky {
    position: static;
  }

  .index .index-box {
    max-height: 100%;
  }

  .content .authors li {
    grid-template-areas:
      'avatar avatar'
      'info info';
  }

  .content .authors li .info {
    grid-area: info;
  }

  .anchor-link {
    padding-left: 0;
    margin-left: 0;
  }

  .anchor-link:hover::before,
  .anchor-link:focus::before {
    content: '';
  }

  .content ul li {
    padding: 5px 0;
  }
}

/* Code highlighting */
.code-block {
  margin: 8px 0;
  margin: 0.5rem 0;
  padding: 16px;
  padding: 1rem;
}

.code-block .divider {
  position: relative;
  border: 1px solid #1a2b490a;
  width: calc(100% + 32px);
  width: calc(100% + 2rem);
  left: -16px;
  left: -1rem;
}

.code-block,
pre {
  overflow-y: hidden;
  overflow-x: auto;
  margin: 8px 0;
  margin: 0.5rem 0;
  padding: 24px;
  padding: 1.5rem;
}

.code-block code {
  width: 100%;
}

